--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
